[GPUP] RemoteGraphicsContextsGL shouldn't be referenced when ENABLE_WEBGL is off https://bugs.webkit.org/show_bug.cgi?id=224560

Reviewed by Alex Christensen.

Add an ENABLE(WEBGL) guard.

* GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::didClose):


Canonical link: https://commits.webkit.org/236521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275968 268f45cc-cd09-0410-ab3c-d52691b4dbfc